--- a/noticiaThee.html
+++ b/noticiaThee.html
@@ -56,7 +56,45 @@
       <!-- FIM MENU -->
       <div class="pagina">
         <h2 class="sub1">Inicio >> Notícias >> Stranger Things: Melhores Episodeos</h2>
-
+        <h3 class="noth3">Estes são os melhores episódios de Stranger Things</h3>
+        <center><img class="img-fluid" src="imagens/img not3-1.jpg" alt="Stranger Things"></center>
+        <p class="notP">Homenagem aos clássicos mistérios sobrenaturais dos anos 80, "Stranger Things" é a história de um menino que desaparece na pequena cidade de Hawkins, Indiana, sem deixar vestígios em 1983. Em sua busca desesperada, tanto seus amigos e familiares quanto o local xerife está envolvido em um enigma extraordinário: experimentos ultrassecretos, forças paranormais aterrorizantes e uma garota muito, muito rara ...</p>
+        <h4 class="noth4">Trick or Treat, Freak!</h4>
+        <p class="notP">Episódios ambientados no Halloween sempre são uma boa pedida. No segundo episódio da segunda temporada de Stranger Things, a turma se veste de caça-fantasmas e Max é introduzida no grupo. Além disso, o episódio oferece um olhar sobre o que aconteceu com Eleven após o fim da primeira temporada.</p>
+        <center><img class="img-fluid" src="imagens/img not3-2.jpg" alt="Stranger Things"></center>
+        <h4 class="noth4">The Bite</h4>
+        <p class="notP">The Bite, o penúltimo episódio da terceira temporada de Stranger Things, finalmente juntou os personagens para o grande clímax do episódio final. The Bite conta com momentos emocionantes, como a batalha de Eleven contra o devorador de mentes na cabana de Hopper. Robin abre o jogo sobre sua sexualidade para Steve e Alexei morre tragicamente.</p>
+        <center><img class="img-fluid" src="imagens/img not3-3.jpeg" alt="Stranger Things"></center>
+        <h4 class="noth4">The Spy</h4>
+        <p class="notP">O grande momento desse episódio acontece quando Steve e os garotos se unem para enfrentar os demodogs. O sexto episódio da segunda temporada também traz o início da amizade entre Steve e Dustin.</p>
+        <center><img class="img-fluid" src="imagens/img not3-4.jpeg" alt="Stranger Things"></center>
+        <h4 class="noth4">The Sauna Test</h4>
+        <p class="notP">Além de contar com uma cena impressionante na qual Eleven confronta Billy (possuído pelo Devorador de Mentes), The Sauna Test também traz o primeiro momento importante de Erica, que se infiltra na base russa por um duto de ar.</p>
+        <center><img class="img-fluid" src="imagens/img not3-5.jpeg" alt="Stranger Things"></center>
+        <h4 class="noth4">The Monster</h4>
+        <p class="notP">No sexto episódio da primeira temporada de Stranger Things, a amizade entre Eleven e a turma finalmente se solidifica. A garota salva Mike, obrigado a pular de um desfiladeiro por um valentão.</p>
+        <center><img class="img-fluid" src="imagens/img not3-6.jpeg" alt="Stranger Things"></center>
+        <h4 class="noth4">The Gate</h4>
+        <p class="notP">The Gate é o penúltimo episódio da segunda temporada de Stranger Things. Os heróis finalmente se juntam para liberar Will do Devorador de Mentes e fechar o portal para o Mundo Invertido.</p>
+        <center><img class="img-fluid" src="imagens/img not3-7.jpeg" alt="Stranger Things"></center>
+        <h4 class="noth4">The Mind Flayer</h4>
+        <p class="notP">The Mind Flayer é com certeza um dos episódios mais tristes de Stranger Things. É nele que acontece a morte de Bob, um momento realmente inesperado e que partiu o coração dos fãs.</p>
+        <center><img class="img-fluid" src="imagens/img not3-8.jpeg" alt="Stranger Things"></center>
+        <h4 class="noth4">The Vanishing of Will Byers</h4>
+        <p class="notP">Poucas séries conseguiram introduzir uma história tão bem quanto Stranger Things. No primeiro episódio da série, os personagens e as tramas são apresentados de forma ágil e dinâmica, além da nostalgia dos anos 80 marcar o enredo.</p>
+        <center><img class="img-fluid" src="imagens/img not3-9.jpeg" alt="Stranger Things"></center>
+        <h4 class="noth4">The Battle of Starcourt</h4>
+        <p class="notP">O episódio final da terceira temporada de Stranger Things é praticamente um filme. Extremamente cinemático, ele finalmente reúne todos os personagens no novo shopping de Hawkins, e finaliza de forma épica a trama da temporada.</p>
+        <center><img class="img-fluid" src="imagens/img not3-10.jpeg" alt="Stranger Things"></center>
+        <h4 class="noth4">The Upside Down</h4>
+        <p class="notP">A primeira temporada de Stranger Things conseguiu concluir a trama da melhor maneira possível. Todos os elementos introduzidos nos episódios anteriores se fundiram em uma hora de verdadeira emoção e brilhante capacidade narrativa</p>
+        <center><img class="img-fluid" src="imagens/img not3-11.jpg" alt="Stranger Things"></center>
+        <h4 class="noth4">Ler mais</h4>
+        <ul class="treUl">
+          <li><a class="oneA" href="">Stranger Things: A mais assustadora!</a></li>
+          <li><a class="oneA" href="">Stranger Things: Teorias da 4ª Temporada</a></li>
+          <li><a class="oneA" href="">Stranger Things: Melhores Episodeos</a></li>
+        </ul>
       </div>
     
       <!-- RODAPÉ -->  
