--- a/Elenco.html
+++ b/Elenco.html
@@ -41,9 +41,9 @@
                       Temporadas
                     </a>
                     <div class="dropdown-menu" style="background: #f7003e;" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="seasonone.html">Temporada 1</a>
-                      <a class="dropdown-item" href="seasontwo.html">Temporada 2</a>
-                      <a class="dropdown-item" href="seasonthree.html">Temporada 3</a>
+                      <a class="dropdown-item" href="seasonone.html">1ª Temporada</a>
+                      <a class="dropdown-item" href="seasontwo.html">2ª Temporada</a>
+                      <a class="dropdown-item" href="seasonthree.html">3ª Temporada</a>
                     </div>
                   </li> 
                 </ul>
@@ -57,7 +57,7 @@
             <!-- FIM MENU -->
 
             <div class="pagina"> 
-              <h2 class="sub1">Inicio >>Elenco</h2>
+              <h2 class="sub1"><a class="oneA" href="index.html">Inicio</a> >>Elenco</h2>
               <div class="container">
                 <div class="row" style="text-align: center;">               
                   <div class="col-md-3">
