--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
                   Temporadas
                 </a>
                 <div class="dropdown-menu" style="background: #f7003e;" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="seasonone.html">Temporada 1</a>
-                  <a class="dropdown-item" href="seasontwo.html">Temporada 2</a>
-                  <a class="dropdown-item" href="seasonthree.html">Temporada 3</a>
-                  <a class="dropdown-item" href="seasonfuor.html">Temporada 4</a>
+                  <a class="dropdown-item" href="seasonone.html">1ª Temporada</a>
+                  <a class="dropdown-item" href="seasontwo.html">2ª Temporada</a>
+                  <a class="dropdown-item" href="seasonthree.html">3ª Temporada</a>
                 </div>
               </li> 
             </ul>
@@ -99,7 +98,7 @@
                 <figcaption class="figure-caption">
                   <h3 class="homeh3">Teorias da 4ª Temporada</h3>
                   <p class="homeP">Com a suposta morte de Hopper, personagem de David Harbour...</p>
-                  <a href="seasonone.html"><button type="button" class="btn btn-outline-danger">Ler mais</button></a>
+                  <a href="noticiaOne.html"><button type="button" class="btn btn-outline-danger">Ler mais</button></a>
                   </figcaption>
                 </figure>
               </div>
@@ -109,7 +108,7 @@
                       <figcaption class="figure-caption">
                           <h3 class="homeh3">Você conhece o Demogorgon?</h3>
                           <p class="homeP">A série deixou algumas perguntas que nunca foram respondidas...</p>
-                          <a href="seasontwo.html"><button type="button" class="btn btn-outline-danger">Ler mais</button></a> 
+                          <a href="noticiaTwo.html"><button type="button" class="btn btn-outline-danger">Ler mais</button></a> 
                       </figcaption>
                   </figure>
               </div>
@@ -119,7 +118,7 @@
                   <figcaption class="figure-caption">
                     <h3 class="homeh3">Melhores Episodeos</h3>
                     <p class="homeP">Homenagem aos mistérios sobrenaturais clássicos dos anos 80...</p>
-                    <a href="seasonthree.html"><button type="button" class="btn btn-outline-danger">Ler mais</button></a>
+                    <a href="noticiaThee.html"><button type="button" class="btn btn-outline-danger">Ler mais</button></a>
                   </figcaption>
                 </figure>
               </div>
@@ -129,7 +128,7 @@
                   <figcaption class="figure-caption">
                     <h3 class="homeh3">A mais assustadora!</h3>
                     <p class="homeP">Gaten Matarazzo, o Dustin de "Stranger Things", promete que a...</p>
-                    <a href="seasonone.html"><button type="button" class="btn btn-outline-danger">Ler mais</button></a>
+                    <a href="noticiaFuor.html"><button type="button" class="btn btn-outline-danger">Ler mais</button></a>
                   </figcaption>
                 </figure>
               </div>
