--- a/seasonone.html
+++ b/seasonone.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/galeria.css">
 
     <title>&#127909Stranger Things</title>
   </head>
@@ -43,6 +44,7 @@
                   <a class="dropdown-item" href="seasonone.html">1ª Temporada</a>
                   <a class="dropdown-item" href="seasontwo.html">2ª Temporada</a>
                   <a class="dropdown-item" href="seasonthree.html">3ª Temporada</a>
+
                 </div>
               </li> 
             </ul>
@@ -56,20 +58,39 @@
       <!-- FIM MENU -->
 
       <div class="pagina">
-        <h2 class="sub1">Inicio >> Stranger Things: 1ª Temporada</h2>
+        <h2 class="sub1"><a class="oneA" href="index.html">Inicio</a> >> Stranger Things: 1ª Temporada</h2>
         <h3 class="oneh3">1ª Temporada</h3>
           <p class="onerecuo">99 em cem vezes, a criança desaparecida está com um dos pais ou parente. E da outra vez?</p>
           <p class="onerecuo"> Uma carta de amor aos clássicos sobrenaturais dos anos 80, Stranger Things é a história de um jovem que desaparece no ar. Enquanto amigos, família e polícia local procuram por respostas, eles são atraídos para um mistério extraordinário envolvendo experimentos ultrassecretos do governo, forças. Stranger Things é estrelado por Winona Ryder, David Harbor, Finn Wolfhard, Millie Brown, Gaten Matarazzo, Caleb McLaughlin, Noah Schnapp, Natalia Dyer, Cara Buono, Charlie Heaton e Matthew Modine. Matt Duffer e Ross Duffer (Wayward Pines, Hidden) atuam como roteiristas, diretores e co-showrunners da série e são produtores executivos junto com Shawn Levy e Dan Cohen por meio de seu banner de entretenimento 21 Laps (The Spectacular Now, Night At The Museum , Real Steel, Date Night). Shawn Levy também atua como diretor. Stranger Things é uma série original da Netflix. "</p>
           <p class="onerecuo">Hawkins, Indiana. 1983. Um garoto de 12 anos desaparece misteriosamente. A família e a polícia procuram respostas, mas acabam se deparando com um experimento secreto do governo. Enquanto isso, os amigos do menino iniciam suas próprias investigações, o que os levam a um extraordinário mistério envolvendo forças sobrenaturais e uma garotinha muito, muito estranha.</p>
-        <ul id=album-fotos>
-          <li id=fotos01></li>
-          <li id=fotos02></li>
-          <li id=fotos03></li>
-          <li id=fotos04></li>
-          <li id=fotos05></li>
-          <li id=fotos06></li>
-        </ul> 
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <div class="modal">
+            <div class="modal_content">
+                <img src="imagens/img temp1-1.jpg" id="modal_img">
+            </div>
+            <span id="bt_close">&times;</span>
+          </div>
+          <div class="row">
+            <div class="card_img">
+                <img src="imagens/img temp1-1.jpg" class="small_img">
+            </div>
+            <div class="card_img">
+                <img src="imagens/img temp1-2.jpg" class="small_img">
+            </div>
+            <div class="card_img">
+                <img src="imagens/img temp1-3.jpg" class="small_img">
+            </div>
+        </div>
+        <div class="row">
+                <div class="card_img">
+                    <img src="imagens/img temp1-4.jpg" class="small_img">
+                </div>
+                <div class="card_img">
+                    <img src="imagens/img temp1-5.jpg" class="small_img">
+                </div>
+                <div class="card_img">
+                    <img src="imagens/img temp1-6.jpg" class="small_img">
+                </div>
+            </div>
         <h4 class="oneh4">Episodeos</h4>
         <ol class="oneOl">
           <li>"The Vanishing of Will Byers"</li>
@@ -105,6 +126,7 @@
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> 
+      <script src="javaScript/galeria.js"></script>
     </div>    
   </body>
 </html>
