--- a/seasonthree.html
+++ b/seasonthree.html
@@ -9,11 +9,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/galeria.css">
 
     <title>&#127909Stranger Things</title>
   </head>
 
   <body class="fundo" style="font-family: 'Fonte1';">
+    <div class="modal">
+      <div class="modal_content">
+          <img src="imagens/01.jpg" id="modal_img">
+      </div>
+      <span id="bt_close">&times;</span>
+    </div>
     <div class="container">
       <h1>Inicio</h1>
     
@@ -55,19 +62,32 @@
 
       <!-- FIM MENU -->
       <div class="pagina">
-        <h2 class="sub1">Inicio >> Stranger Things: 3ª Temporada</h2>
+        <h2 class="sub1"><a class="oneA" href="index.html">Inicio</a> >> Stranger Things: 3ª Temporada</h2>
         <h3 class="treh3">3ª Temporada</h3>
         <p class="treP">É 1985 em Hawkins , Indiana , e o verão está esquentando. Acabou a escola, há um shopping center novo na cidade e a equipe de Hawkins está à beira da idade adulta. O romance floresce e complica a dinâmica do grupo , e eles terão que descobrir como crescer sem se separar. </p>
         <p class="treP">Enquanto isso, o perigo se aproxima. Quando a cidade é ameaçada por inimigos novos e antigos, Eleven e seus amigos são lembrados de que o mal nunca termina; ele evolui. Agora eles terão que se unir para sobreviver e lembrar que a amizade é sempre mais forte do que o medo.</p>
-        <ul id=album-fotos>
-          <li id=fotos13></li>
-          <li id=fotos14></li>
-          <li id=fotos15></li>
-          <li id=fotos16></li>
-          <li id=fotos17></li>
-          <li id=fotos18></li>
-        </ul> 
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div class="row">
+          <div class="card_img">
+              <img src="imagens/img temp3-1.jpg" class="small_img">
+          </div>
+          <div class="card_img">
+              <img src="imagens/img temp3-2.jpg" class="small_img">
+          </div>
+          <div class="card_img">
+              <img src="imagens/img temp3-3.jpg" class="small_img">
+          </div>
+      </div>
+      <div class="row">
+              <div class="card_img">
+                  <img src="imagens/img temp3-4.jpg" class="small_img">
+              </div>
+              <div class="card_img">
+                  <img src="imagens/img temp3-5.jpg" class="small_img">
+              </div>
+              <div class="card_img">
+                  <img src="imagens/img temp3-6.jpg" class="small_img">
+              </div>
+          </div>
         <h4 class="treh4">Episodeos</h4>
         <ol class="treOl">
           <li>"Suzie, Do You Copy?"</li>
@@ -101,6 +121,7 @@
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> 
+      <script src="javaScript/galeria.js"></script>
     </div> 
   </body>
 </html>
